--- a/sample-thousands-module/pom.xml
+++ b/sample-thousands-module/pom.xml
@@ -37,4 +37,26 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <finalName>app</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>3.1.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>com.swirlds.spi.sample.ThousandsSample</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
